# backgammon-model

./: .travis.yml  README.md  backgammon-model.cabal
src/: Backgammon.hs
src/Backgammon/: Format.hs  Model.hs
tests/: test.hs
tests/Backgammon/: FormatTests.hs  ModelTests.hs
