name:              backgammon-model
version:           0.1.0.0
cabal-version:     >= 1.20
license:           MIT
author:            Maciek Makowski
synopsis:          A model of backgammon game
build-type:        Simple

library
  hs-source-dirs: src
  default-language:  Haskell98
  build-depends:
      base   >= 4 && < 5
  exposed-modules:
      Backgammon
      Backgammon.Format
      Backgammon.Model

test-suite test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            All.hs
  build-depends:
      base              >=    4 && < 5
    , tasty             >= 0.10
    , tasty-hunit       >= 0.9
    , backgammon-model
